# saltstack-age

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yaml  pypi-publish.yaml  release.yaml
config/: age.key  minion
example/: README.md
example/config/: minion
example/pillar/: test.sls
example/states/: test.sls
pillar/: test.sls
src/saltstack_age/: cli.py  identities.py  passphrase.py  secure_value.py
src/saltstack_age/renderers/: age.py
states/: test.sls
states/_renderers/: age.py
tests/: conftest.py
tests/integration/: _test_renderer_identity.py  conftest.py  test_age.py  test_cli.py  test_renderer_identity_from_config.py  test_renderer_identity_from_environment.py
tests/renderers/: test_age.py
tests/unit/renderers/: _test_identity.py  _test_passphrase.py  conftest.py  test_age.py  test_identity.py  test_identity_file_from_config.py  test_identity_from_config.py  test_identity_from_environment.py  test_identity_string_from_config.py  test_passphrase_from_config.py  test_passphrase_from_environment.py
typings/: __builtins__.pyi
typings/pyrage/: __init__.py  __init__.pyi  passphrase.py  x25519.py
typings/salt/: exceptions.pyi
typings/saltfactories/: manager.pyi  utils.pyi
typings/saltfactories/cli/: call.pyi
typings/saltfactories/daemons/: minion.pyi
