[project]
name = "saltstack-age-renderer"
version = "0.1.0"
description = "age renderer for Saltstack"
authors = [{ name = "Philippe Muller" }]
dependencies = [
    "pexpect>=4.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
    "ipython>=8.23.0",
]
