[project]
name = "saltstack-age"
version = "0.1.0"
description = "age renderer for Saltstack"
authors = [{ name = "Philippe Muller" }]
dependencies = [
    "pyrage>=1.1.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.23.0",
    "pytest>=8.1.2",
    "pytest-salt-factories>=1.0.1",
    "salt>=3007.0",
    "basedpyright>=1.10.4",
    "ruff>=0.4.2",
]

[project.entry-points."salt.loader"]
saltstack-age = "saltstack_age"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/saltstack_age"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
builtins = ["__salt__"]

[tool.basedpyright]
reportAny = false
